# acciopy

./: .gitignore  README.md  build-and-upload.bash  pyproject.toml  setup.cfg  setup.py
acciopy/: __init__.py  fuzzmatch.py  sc.py
src/: __init__.py
src/fuzzmatch/: __init__.py  fuzzmatch.py
