[metadata]
name = acciopy-Accio
version = 0.0.4
author = Accio
author_email = jitao_david.zhang@roche.com
description = Accio's python snippets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Accio/acciopy
project_urls =
    Bug Tracker = https://github.com/Accio/acciopy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
